force-app/main/default/objects/Backbone_Trends__c/Backbone_Trends__c.object-meta.xml
<CustomObject>
    <label>Daily Backbone Trends</label>
    <nameField>
        <displayFormat>BBTR-{000000000}</displayFormat>
        <label>Backbone Trends Record</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Daily Backbone Trends</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>