force-app/main/default/objects/Backbone_Trends__c/fields/Additive_Cost__c.field-meta.xml
<CustomField>
    <fullName>Additive_Cost__c</fullName>
    <label>Additive Cost(Euro/Mt)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>