force-app/main/default/objects/Backbone_Trends__c/fields/Bio_Cost__c.field-meta.xml
<CustomField>
    <fullName>Bio_Cost__c</fullName>
    <label>Bio Cost(Euro/Mt)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>