force-app/main/default/objects/Backbone_Trends__c/fields/CreatedDate__c.field-meta.xml
<CustomField>
    <fullName>CreatedDate__c</fullName>
    <formula>DATEVALUE( CreatedDate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CreatedDate</label>
    <type>Date</type>
</CustomField>