force-app/main/default/objects/Backbone_Trends__c/fields/Daily_BSP_Trends__c.field-meta.xml
<CustomField>
    <fullName>Daily_BSP_Trends__c</fullName>
    <label>Daily BSP Trends</label>
    <referenceTo>BSP_Trends__c</referenceTo>
    <relationshipLabel>Daily Backbone Trends</relationshipLabel>
    <relationshipName>Daily_Backbone_Trends</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>