force-app/main/default/objects/Backbone_Trends__c/fields/Depot__c.field-meta.xml
<CustomField>
    <fullName>Depot__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Depot</label>
    <referenceTo>Location__c</referenceTo>
    <relationshipLabel>Daily Backbone Trends (Depot)</relationshipLabel>
    <relationshipName>Daily_Backbone_Trends1</relationshipName>
    <type>Lookup</type>
</CustomField>