force-app/main/default/objects/Backbone_Trends__c/fields/Depot_Steer_Euro_Mt__c.field-meta.xml
<CustomField>
    <fullName>Depot_Steer_Euro_Mt__c</fullName>
    <formula>Daily_BSP_Trends__r.Depot_Steer__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Depot Steer(Euro/Mt)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>