force-app/main/default/objects/Backbone_Trends__c/fields/Final_BAMV_Value__c.field-meta.xml
<CustomField>
    <fullName>Final_BAMV_Value__c</fullName>
    <label>Final BAMV Value(Euro/Mt)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>