force-app/main/default/objects/Backbone_Trends__c/fields/Freight_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Freight_Percentage__c</fullName>
    <label>Freight Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>