force-app/main/default/objects/Backbone_Trends__c/fields/FreightToDepot__c.field-meta.xml
<CustomField>
    <fullName>FreightToDepot__c</fullName>
    <label>FreightToDepot(Euro/MT)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>