force-app/main/default/objects/Backbone_Trends__c/fields/HCV__c.field-meta.xml
<CustomField>
    <fullName>HCV__c</fullName>
    <label>HCV(Euro/Mt)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>