force-app/main/default/objects/Backbone_Trends__c/fields/Mrc_No__c.field-meta.xml
<CustomField>
    <fullName>Mrc_No__c</fullName>
    <label>Mrc No</label>
    <length>30</length>
    <type>Text</type>
</CustomField>