force-app/main/default/objects/Backbone_Trends__c/fields/Route_Steers_and_Freight__c.field-meta.xml
<CustomField>
    <fullName>Route_Steers_and_Freight__c</fullName>
    <formula>(Steers_and_Freight__c *  Route_Utilization__c)/100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Route%*Steers and Freight</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>