force-app/main/default/objects/Backbone_Trends__c/fields/Route_Uti_CO_steer__c.field-meta.xml
<CustomField>
    <fullName>Route_Uti_CO_steer__c</fullName>
    <formula>(Route_Utilization__c *  CO_Steer__c)/100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Route Uti * CO steer</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>