force-app/main/default/objects/Backbone_Trends__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source</label>
    <referenceTo>Location__c</referenceTo>
    <relationshipLabel>Daily Backbone Trends</relationshipLabel>
    <relationshipName>Daily_Backbone_Trends</relationshipName>
    <type>Lookup</type>
</CustomField>