force-app/main/default/objects/Backbone_Trends__c/fields/Steers_and_Freight__c.field-meta.xml
<CustomField>
    <fullName>Steers_and_Freight__c</fullName>
    <formula>Sum_of_HCV_steers__c +  FreightToDepot__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Steers and Freight</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>