force-app/main/default/objects/Backbone_Trends__c/fields/Sum_of_HCV_steers__c.field-meta.xml
<CustomField>
    <fullName>Sum_of_HCV_steers__c</fullName>
    <formula>CO_Steer__c +  FreightToSource__c +  Depot_Steer_Euro_Mt__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sum of HCV steers</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>