force-app/main/default/objects/Backbone_Trends__c/fields/Tranche__c.field-meta.xml
<CustomField>
    <fullName>Tranche__c</fullName>
    <formula>TEXT(Daily_BSP_Trends__r.Tranche__c)</formula>
    <label>Tranche</label>
    <type>Text</type>
</CustomField>